# django-api-3

./: README.md  pyproject.toml
escola/: serializer.py  views.py
escola/migrations/: 0001_initial.py  0002_aluno_celular.py  0003_aluno_foto.py
setup/: settings.py  urls.py
